--- a/TODO
+++ b/TODO
@@ -1,7 +1,5 @@
 Todo:
-  ✔ Fix Copyright @started(23-05-17 10:15) @done(23-05-17 10:16) @lasted(1m55s)
-  ✔ Create form @started(23-05-17 10:57) @done(23-05-17 12:18) @lasted(1h21m41s)
-  ✔ Rewrite css @started(23-05-17 12:00) @done(23-05-17 12:49) @lasted(49m39s)
-  ✔ Add form @started(23-05-17 12:50) @done(23-05-17 13:29) @lasted(39m37s)
-  ✘ Add saves @started(23-05-17 13:30) @cancelled(23-05-17 13:54) @wasted(24m17s)
+  ✔ Add saves @started(23-05-17 15:27) @done(23-05-17 16:54) @lasted(1h27m22s)
+  ✔ Test and debug save system @started(23-05-18 10:51) @done(23-05-18 13:43) @lasted(2h52m19s)
+  ✘ General updates @started(23-05-18 13:47) @cancelled(23-05-18 13:48) @wasted(1m27s)
   ☐ Update for mobile
