--- a/TODO
+++ b/TODO
@@ -1,5 +1,36 @@
-Todo:
-  ✔ Add saves @started(23-05-17 15:27) @done(23-05-17 16:54) @lasted(1h27m22s)
-  ✔ Test and debug save system @started(23-05-18 10:51) @done(23-05-18 13:43) @lasted(2h52m19s)
-  ✘ General updates @started(23-05-18 13:47) @cancelled(23-05-18 13:48) @wasted(1m27s)
-  ☐ Update for mobile
+5/25/2023:
+  ✔ Fix bug??? @started(23-05-25 12:08) @done(23-05-25 12:23) @lasted(15m46s)
+
+6/27/2023:
+  ✔ Redesign for mobile: @started(23-06-27 09:06) @done(23-06-27 12:35) @lasted(3h29m11s)
+    ✔ Guide Page @started(23-06-27 09:06) @done(23-06-27 10:21) @lasted(1h15m57s)
+      ✔ Info Boxes @done(23-06-27 09:20)
+      ✔ Images @done(23-06-27 09:54)
+      ✔ Links @done(23-06-27 10:21)
+    ✔ Topic Calculator @started(23-06-27 10:21) @done(23-06-27 12:34) @lasted(2hr13m14s)
+      ✔ Buttons @done(23-06-27 10:52)
+      ✔ Boxes @done(23-06-27 11:03)
+      ✔ Links @done(23-06-27 11:26)
+      ✔ Menu Bar @done(23-06-27 12:34)
+    Redesign Print Page:
+      ☐ Better theme
+      ☐ Fix formatting
+      ☐ Make it pretty
+    Bug fixes:
+      ✔ Check calculations @started(23-06-27 13:13) @done(23-06-27 14:58) @lasted(1h45m15s)
+      ✔ Optimize code @started(23-06-27 14:58) @done(23-06-27 15:23) @lasted(25m43s)
+      ✔ Fix formatting @started(23-06-27 15:23) @done(23-06-27 15:48) @lasted(25m22s)
+
+6/28/2023:
+  Study Tool Quiz:
+    ✔ Design Quiz Page @started(23-06-28 11:06) @done(23-06-28 12:09) @lasted(1h3m2s)
+    ✘ Set up in React.js? @cancelled(23-06-28 11:24)
+    ☐ Write JSON file for questions and point values @started(23-06-28 12:09)
+    ☐ Write JSON file for study tool associations
+    ☐ Calculate association values
+    ☐ Organize question and study tool relations
+    ☐ Write repeatable function to be used for each question
+  Redesign Print Page:
+    ☐ Better theme
+    ☐ Fix formatting
+    ☐ Make it pretty
